<resources>
    <string name="app_name">NailScheduler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_signIn">כניסה</string>
    <string name="button_signUp">הירשם!</string>
    <string name="password">סיסמא</string>
    <string name="Email">היכנס עם Email</string>
    <string name="type_owner">אני בעל/ת עסק</string>
    <string name="type_client">אני לקוח/ה</string>
    <string name="Email_Reg">Email</string>
    <string name="fName_Reg">שם מלא</string>
    <string name="business_name_Reg">שם בית העסק</string>
    <string name="business_addr_city">עיר</string>
    <string name="business_addr_street">רחוב</string>
    <string name="business_addr_number">מספר</string>
    <string name="phone_n_Reg">טלפון</string>
    <string name="button_register">הירשם</string>
    <string name="business_Pro">צפייה ואישור תורים</string>
    <string name="client_Pro">צפייה בתורים שלי</string>
    <string name="client_Pro_schedule">הזמן תור</string>
    <string name="hello_Pro">שלום !</string>
    <string name="new_appointment_header">קביעת תור חדש</string>
    <string name="client_apt_details">פריטי התור !</string>
    <string name="client_apt_view"></string>
    <string name="date">תאריך</string>
    <string name="startTime">שעת התחלה</string>
    <string name="endTime">שעת סיום</string>
    <string name="search">חפש</string>
    <string name="create_apt">הזמן תור</string>
    <string name="add_reminder">לחץ להוספת התראה 24 שעות לפני התור</string>


</resources>