<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterClient"
    android:background="@drawable/pink"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26dp"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="הרשמה כלקוח"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:hint="@string/fName_Reg"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="22sp" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:hint="@string/Email_Reg"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:padding="8dp"
            android:textSize="22sp"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:hint="@string/phone_n_Reg"
            android:imeOptions="actionDone"
            android:padding="8dp"
            android:textSize="22sp"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="140dp"
            android:layout_height="56dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/button_signUp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:strokeColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>

