<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".RegisterBusiness">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="הרשמה כבעל עסק"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="פרטי בעל העסק"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/fName_Reg"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/Email_Reg"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="פרטי העסק"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/business_name_Reg"
                android:imeOptions="actionNext"
                android:inputType="textPhonetic"
                android:padding="5dp"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/etBPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:hint="@string/phone_n_Reg"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:padding="8dp"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="right"
                android:text="כתובת העסק"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/addrCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                android:hint="@string/business_addr_city"
                android:imeOptions="actionNext"
                android:padding="5dp"
                android:textSize="22sp"/>

            <EditText
                android:id="@+id/addrStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/business_addr_street"
                android:imeOptions="actionNext"
                android:inputType="textPostalAddress"
                android:padding="5dp"
                android:textSize="22sp" />
            <EditText
                android:id="@+id/addrNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="right"
                android:hint="@string/business_addr_number"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:padding="5dp"
                android:textSize="22sp" />
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFFFFF"
                android:text="@string/button_signUp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:strokeColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>

